Use AVFoundation to capture and back display camera feed in the view.

--- a/image-detection/image-detection/Info.plist
+++ b/image-detection/image-detection/Info.plist
@@ -58,5 +58,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>When need to use the camera to detect objects.</string>
 </dict>
 </plist>
